2016-10-02  Onkar Shinde  <onkarshinde@gmail.com>

	* src/callbacks.c, src/gui-app.c, src/gui-list-message.c,
	src/interface.c: Cleaned up the code to reduce the widgets and made it
	more readable.

2016-09-26  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.ac, src/gui-editor.*, src/interface.c: Made it possible to
	build with GTK3 APIs. Use --with-gtk3 option of configure script.

2016-09-22  Onkar Shinde  <onkarshinde@gmail.com>

	* m4/*, po/*, ABOUT-NLS, config.rpath, configure.ac: Updates to gettext
	macros and other related files to version 0.18.1.

2016-02-16  Onkar Shinde  <onkarshinde@gmail.com>

	* po/*.po, PO/LINGUAS: New/Updated translations.
	* configure.ac, src/*: Bumped required GTK+ version, replaced use of
	deprecatd APIs, file handling using gio made default.
	* doc/help/Makefile.am: Install help files only if they are built.
	* WINDOWS-PORT.TXT, installer.nsi.in: Updated instructions, installer.

2016-01-30  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.ac, config.sub, config.guess, src/Makefile.am: Updates to
	make autotools happy.

2011-09-19  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in, doc/Makefile.am, doc/help/*, autoclean.sh: Build system
	changes for providing HTML help pages converted from docbook files.

2011-09-11  Onkar Shinde  <onkarshinde@gmail.com>

	* src/gui-editor.h: Use only top level headers for gtksourceview.
	* src/gui-editor.c, src/gui-list-message.c: In GtkTextBuffer line
	numbers start from 0. Take this into account when highlighting line.
	* src/file-op*.c: Fix cursor position as per sample program length.

2011-09-05  Onkar Shinde  <onkarshinde@gmail.com>

	* installer.nsi.in, WINDOWS-PORT.txt: Updated Windows specific files as per
	recent changes.
	* src/gui-editor.c: Set appropriate unit for print operation. This is Windows
	specific change. Fixes printing on Windows.

2011-08-30  Onkar Shinde  <onkarshinde@gmail.com>

	* src/main.c, src/interface.[c,h]: Remove url activation hook. Not needed