@@ -1,3 +1,8 @@
+2016-10-08  Onkar Shinde  <onkarshinde@gmail.com>
+
+	* src/interface.[c,h]: Use correct box widgets depending on GTK version.
+	* src/callbacks.c: Use correct font dialog depending on GTK version.
+
 2016-10-02  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* src/callbacks.c, src/gui-app.c, src/gui-list-message.c,
